--- a/base/build.gradle
+++ b/base/build.gradle
@@ -3,7 +3,6 @@ plugins {
 }
 
 dependencies {
-    compile project(':common')
-
+    implementation project(':common')
     implementation 'org.apache.commons:commons-math3:3.6.1'
 }
