--- a/.github/workflows/snyk_ci.yml
+++ b/.github/workflows/snyk_ci.yml
@@ -16,6 +16,7 @@ jobs:
         name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/gradle-jdk16@master
         env:
+          SNYK_TEST: true
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: monitor
