--- a/.github/workflows/snyk_ci.yml
+++ b/.github/workflows/snyk_ci.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v2
       -
         name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/gradle-jdk16@master
+        uses: snyk/actions/gradle@master
         env:
           SNYK_TEST: true
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
